# ThermOpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: atmplace_benchmark.yaml  atmplace_thermfm_benchmark.yaml  atmplace_ufno_benchmark.yaml  atplace_benchmark.yaml  atplace_thermfm_benchmark.yaml  atplace_ufno_benchmark.yaml  atplace_v0.yaml  atplace_wl_compare.yaml  atplace_wl_milp.yaml  atplace_wl_remaining.yaml  atplace_wl_reproduce.yaml  optimizer_comparison.yaml  rl_from_atplace_8_10.yaml  rl_from_greedy_8_10.yaml  rl_from_milp_5_7.yaml  rl_from_milp_all.yaml  rl_refinement.yaml  rl_refinement_all.yaml  v0_default.yaml  wl_benchmark.yaml
scripts/: augment_pointwise_features.py  compare_milp_vs_dataset.py  generate_thermal_dataset.py  hotspot_validate.py  plot_opt_comparison.py  plot_thermal_comparison.py  plot_ufno_accuracy.py  run_atmplace.sh  run_atmplace_thermfm.sh  run_atmplace_ufno.sh  run_atplace.sh  run_atplace_thermfm.sh  run_atplace_ufno.sh  run_dataset_added_case5_8.sh  run_milp_thermal.py  run_optimizer_comparison.sh  run_rl_refinement.sh  run_v0.sh  spacing_repair_eval.py  test_thermal.py  thermal_optimize.py  thermal_tradeoff.py
tests/: README.md  helpers.py  test_atplace_loader.py  test_atplace_wl.py  test_cost.py  test_genetic_algorithm.py  test_geometry.py  test_milp_wl.py  test_optimizer_comparison.py  test_placement_methods.py  test_pointwise_loader.py  test_rl_environment.py  test_rl_local_search.py  test_rl_policy.py  test_run_v0.py  test_thermal_backend.py  test_thermal_dataset.py
xiekeyi/: RL.md  optimizer_comparison.yaml  (+14 more)
(+215 files in other folders)
