[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermopt"
version = "0.1.0"
description = "Minimal thermal-aware chiplet floorplanning with heuristic thermal analysis and simulated annealing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
